{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 335,
  "lineage": "d305c209-01a3-c7ea-1382-6f0c01f3c4e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-00b05928e06a7c3c5",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b05928e06a7c3c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:loadbalancer/app/my-alb/b67edc5f76c573ca",
            "arn_suffix": "app/my-alb/b67edc5f76c573ca",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1034716417.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:loadbalancer/app/my-alb/b67edc5f76c573ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-09fef8cf5da548fe0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e8d01d678a1e153"
              },
              {
                "subnet_id": "subnet-089bda2eab2469195"
              },
              {
                "subnet_id": "subnet-0af8b05abc07b12aa"
              }
            ],
            "subnets": [
              "subnet-03e8d01d678a1e153",
              "subnet-089bda2eab2469195",
              "subnet-0af8b05abc07b12aa"
            ],
            "vpc_id": "vpc-0ece40ebf44041727",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.my-alb.aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:listener/app/my-alb/b67edc5f76c573ca/e9941a4380e5e137",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:targetgroup/my-service/f0b77b4f1d265dc6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:listener/app/my-alb/b67edc5f76c573ca/e9941a4380e5e137",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:loadbalancer/app/my-alb/b67edc5f76c573ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-alb.aws_lb.lb",
            "module.my-alb.aws_security_group.lb",
            "module.my-service.aws_lb_target_group.ecs-service",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-09fef8cf5da548fe0",
            "description": "my-alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fef8cf5da548fe0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-alb",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-allow-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 32768,
            "id": "sgrule-2976801912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b4366d8c3b15738",
            "self": false,
            "source_security_group_id": "sg-09fef8cf5da548fe0",
            "to_port": 61000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-alb.aws_security_group.lb",
            "module.my-ecs.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb-rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:targetgroup/my-service/f0b77b4f1d265dc6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:listener-rule/app/my-alb/b67edc5f76c573ca/e9941a4380e5e137/944bc3ced1e236f4",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "subdomain.ecs.newtech.academy"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:listener-rule/app/my-alb/b67edc5f76c573ca/e9941a4380e5e137/944bc3ced1e236f4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:listener/app/my-alb/b67edc5f76c573ca/e9941a4380e5e137",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-alb.aws_lb.lb",
            "module.my-alb.aws_lb_listener.lb-http",
            "module.my-alb.aws_security_group.lb",
            "module.my-service.aws_lb_target_group.ecs-service",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-01b4366d8c3b15738",
            "description": "my-ecs",
            "egress": [],
            "id": "sg-01b4366d8c3b15738",
            "ingress": [],
            "name": "my-ecs",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2905004487",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b4366d8c3b15738",
            "self": false,
            "source_security_group_id": "sg-00b05928e06a7c3c5",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-ssh",
            "module.my-ecs.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-108506069",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01b4366d8c3b15738",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-ecs.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:targetgroup/my-service/f0b77b4f1d265dc6",
            "arn_suffix": "targetgroup/my-service/f0b77b4f1d265dc6",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473359703960:targetgroup/my-service/f0b77b4f1d265dc6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-service",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-0fd21d852f258dd8f",
            "description": "my-service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd21d852f258dd8f",
            "ingress": [],
            "name": "my-service",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:internet-gateway/igw-0541f5db5a07bbec2",
            "id": "igw-0541f5db5a07bbec2",
            "owner_id": "473359703960",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0541f5db5a07bbec2",
            "id": "r-rtb-05eac41314b8a11331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05eac41314b8a1133",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-0151cd8409cc889d8",
            "id": "rtb-0151cd8409cc889d8",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-0594a967992058ab3",
            "id": "rtb-0594a967992058ab3",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-0764f006cb06fdee9",
            "id": "rtb-0764f006cb06fdee9",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-05eac41314b8a1133",
            "id": "rtb-05eac41314b8a1133",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b2290b485725fcc",
            "route_table_id": "rtb-0151cd8409cc889d8",
            "subnet_id": "subnet-005e0736bf40ad4f2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090a04aacd466605c",
            "route_table_id": "rtb-0594a967992058ab3",
            "subnet_id": "subnet-0c52cc8948a5e66e9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031046bc770327b36",
            "route_table_id": "rtb-0764f006cb06fdee9",
            "subnet_id": "subnet-01c482daea13cbe76"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc98c55571f0fa5f",
            "route_table_id": "rtb-05eac41314b8a1133",
            "subnet_id": "subnet-0af8b05abc07b12aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03754acbe6f423d26",
            "route_table_id": "rtb-05eac41314b8a1133",
            "subnet_id": "subnet-03e8d01d678a1e153"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2bec89b8f9b58bf",
            "route_table_id": "rtb-05eac41314b8a1133",
            "subnet_id": "subnet-089bda2eab2469195"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-005e0736bf40ad4f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005e0736bf40ad4f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0c52cc8948a5e66e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c52cc8948a5e66e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-01c482daea13cbe76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c482daea13cbe76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0af8b05abc07b12aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af8b05abc07b12aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-03e8d01d678a1e153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e8d01d678a1e153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-089bda2eab2469195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089bda2eab2469195",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ece40ebf44041727"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:vpc/vpc-0ece40ebf44041727",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1c4e4d0377b0172",
            "default_route_table_id": "rtb-0b93352ec43ee9dd1",
            "default_security_group_id": "sg-0703e3ad5b1756f36",
            "dhcp_options_id": "dopt-0da3c68c1a3b5c853",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ece40ebf44041727",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b93352ec43ee9dd1",
            "owner_id": "473359703960",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-module-demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-module-demo",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}